--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-
+<div class="container">
+    <div class="img-cover-wrapper">
+      <img src="../assets/images/cover.jpg" alt="" />
+    </div>
+</div>
 <router-outlet></router-outlet> 
 
