--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,20 @@
-<p>home works!</p>
+<div class="main-div">
+    <div class="card">
+        <img src="../../assets/images/image1.png" alt="Avatar">
+        <div class="container">
+          <h4><b>John Doe</b></h4>
+          <p>Architect & Engineer</p>
+        </div>
+    </div>  
+    <div class="card">
+        <img src="../../assets/images/image1.png" alt="Avatar">
+        <div class="container">
+          <h4><b>John Doe</b></h4>
+          <p>Architect & Engineer</p>
+        </div>
+    </div>  
+</div>
+  
 
 <!-- The routed views render in the <router-outlet>-->
 <router-outlet></router-outlet>
