Add API features

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,7 +6,8 @@
     flex-direction: row;       
   }
 
-.card {    
+.card {   
+  cursor: pointer; 
     margin-left: 2rem;
     background-color: white;
     position: relative;    
