--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,14 +2,14 @@
     <div class="card">
         <img src="../../assets/images/image1.png" alt="Avatar">
         <div class="container">
-          <h4><b>John Doe</b></h4>
+          <h4><b>ESSE</b></h4>
           <p>Architect & Engineer</p>
         </div>
     </div>  
     <div class="card">
         <img src="../../assets/images/image1.png" alt="Avatar">
         <div class="container">
-          <h4><b>John Doe</b></h4>
+          <h4><b>ESSE</b></h4>
           <p>Architect & Engineer</p>
         </div>
     </div>  
