--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="main-div">
     <div class="card">
-        <img src="../../assets/images/image1.png" alt="Avatar">
+        <img [src]="image1Src" alt="Avatar">
         <div class="container">
           <h4><b>ESSE</b></h4>
           <p>Architect & Engineer</p>
         </div>
     </div>  
     <div class="card">
-        <img src="../../assets/images/image1.png" alt="Avatar">
+        <img [src]="image2Src" alt="Avatar">
         <div class="container">
           <h4><b>ESSE</b></h4>
           <p>Architect & Engineer</p>
@@ -15,6 +15,5 @@
     </div>  
 </div>
   
-
 <!-- The routed views render in the <router-outlet>-->
 <router-outlet></router-outlet>
