Updates on Home css

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,13 @@
 <div class="main-div">
     <div class="card">
+      <div class="img-wrapper">
         <img [src]="image1Src" alt="Avatar">
-        <div class="container">
-          <h4><b>ESSE</b></h4>
-          <p>Architect & Engineer</p>
-        </div>
+      </div>
     </div>  
     <div class="card">
+      <div class="img-wrapper">
         <img [src]="image2Src" alt="Avatar">
-        <div class="container">
-          <h4><b>ESSE</b></h4>
-          <p>Architect & Engineer</p>
-        </div>
+      </div>
     </div>  
 </div>
   
