--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,20 @@
 .container {
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    position: fixed;    
-  }
-  
-  .img-cover-wrapper {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-color: rgba(0, 0, 0, 0.6);
-  }
-  
-  .img-cover-wrapper img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.6;
-  }
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  position: fixed;
+}
+
+.img-cover-wrapper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  // background-color: rgba(0, 0, 0, 0.1);
+}
+
+.img-cover-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  // opacity: 0.6;
+}
